--- a/app/app/views/products/_form.html.erb
+++ b/app/app/views/products/_form.html.erb
@@ -20,6 +20,11 @@
     <%= form.number_field :price %>
   </div>
 
+   <div>
+    <%= form.label :photo %>
+    <%= form.file_field :photo %>
+  </div>
+
   <%= form.submit %>
 
   <% end %>
