--- a/app/app/views/products/index.html.erb
+++ b/app/app/views/products/index.html.erb
@@ -1,7 +1,3 @@
 <h1> Productos: </h1>
-<% @products.each do |product| %>
-  <%= link_to product_path(product.id), class: 'product' do %>
-    <h2><%= product.title %></h2>
-    <span>Ars <%= product.price %></span>
-  <% end %>
-<% end %>
+
+<%= render partial: 'product', collection: @products %>
