--- a/app/app/views/products/_product.html.erb
+++ b/app/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
 <% @products.each do |product| %>
-  <%= link_to product_path(product.id), class: 'product' do %>
+  <%= link_to product_path(product.id), class: 'product' , 'data-turbo-frame': '_top' do %>
      <%= image_tag product.photo, width: 100 if product.photo.attached? %>
     <h2><%= product.title %></h2>
     <span>Ars <%= product.price %></span>
