--- a/app/app/views/products/_product.html.erb
+++ b/app/app/views/products/_product.html.erb
@@ -1,7 +1,6 @@
-<% @products.each do |product| %>
-  <%= link_to product_path(product.id), class: 'product' , 'data-turbo-frame': '_top' do %>
-     <%= image_tag product.photo, width: 100 if product.photo.attached? %>
+<%= link_to product_path(product), class: 'product', 'data-turbo-frame': '_top' do %>
+    <%= image_tag product.photo, width: 100 if product.photo.attached? %>
     <h2><%= product.title %></h2>
-    <span>Ars <%= product.price %></span>
-  <% end %>
+    <span><%= product.price %>$</span>
 <% end %>
+
